draft-gutmann-cms-hmac-enc-06

--- a/draft-gutmann-cms-hmac-enc-06.html
+++ b/draft-gutmann-cms-hmac-enc-06.html
@@ -398,10 +398,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
-<td class="right">June 22, 2011</td>
+<td class="right">November 23, 2011</td>
 </tr>
 <tr>
-<td class="left">Expires: December 24, 2011</td>
+<td class="left">Expires: May 26, 2012</td>
 <td class="right"></td>
 </tr>
 
@@ -410,7 +410,7 @@
   </table>
 
   <p class="title">Using MAC-authenticated Encryption in the Cryptographic Message Syntax (CMS)<br />
-  <span class="filename">draft-gutmann-cms-hmac-enc-05.txt</span></p>
+  <span class="filename">draft-gutmann-cms-hmac-enc-06.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document specifies the conventions for using MAC-authenticated encryption with the Cryptographic Message Syntax (CMS) authenticated-enveloped-data content type.  This mirrors the use of a MAC combined with an encryption algorithm that's already employed in IPsec, SSL/TLS, and SSH, which is widely supported in existing crypto libraries and hardware, and has been extensively analysed by the crypto community.  </p>
@@ -418,7 +418,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 24, 2011.</p>
+<p>This Internet-Draft will expire on May 26, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -495,7 +495,7 @@
     MAC-K := PRF( master_secret, "authentication" );
     CEK-K := PRF( master_secret, "encryption" );
         </pre>
-<p id="rfc.section.3.p.1">Conventional CMS encryption uses a content encryption key (CEK) to encrypt a message payload.  Authenticated encryption requires two keys, one for encryption and a second one for authentication.  Like other mechanisms that use authenticated encryption, this document employs a pseudorandom function (PRF) to convert a single block of keying material into the two keys required for encryption and authentication.  This converts the standard CMS encryption operation: </p>
+<p id="rfc.section.3.p.1">Conventional CMS encryption uses a content encryption key (CEK) to encrypt a message payload, with the CEK typically being in turn encrypted by a key encryption key (KEK).  Authenticated encryption requires two keys, one for encryption and a second one for authentication.  Like other mechanisms that use authenticated encryption, this document employs a pseudorandom function (PRF) to convert a single block of keying material into the two keys required for encryption and authentication.  This converts the standard CMS encryption operation: </p>
 <h1 id="rfc.section.3.1">
 <a href="#rfc.section.3.1">3.1.</a> <a href="#overview_rationale" id="overview_rationale">Rationale</a>
 </h1>
@@ -506,7 +506,7 @@
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#enc-auth" id="enc-auth">CMS Encrypt-and-Authenticate </a>
 </h1>
-<p id="rfc.section.4.p.1">The encrypt-and-authenticate mechanism is implemented within the existing CMS RecipientInfo framework by defining a new pseudo-algorithm type authEnc which is used in place of a monolithic encrypt and hash algorithm.  The RecipientInfo is used as a key container for the master secret used by the pseudo-algorithm from which the encryption and authentication keys for existing single-purpose encrypt-only and MAC-only algorithms are derived.  Thus instead of using the RecipientInfo to communicate (for example) an AES or HMAC-SHA1 key, it communicates an authEnc keying value from which the required AES encryption and HMAC-SHA1 authentication keys are derived.  </p>
+<p id="rfc.section.4.p.1">The encrypt-and-authenticate mechanism is implemented within the existing CMS RecipientInfo framework by defining a new pseudo-algorithm type authEnc which is used in place of a monolithic encrypt and hash algorithm.  The RecipientInfo is used as a key container for the master secret used by the pseudo-algorithm from which the encryption and authentication keys for existing single-purpose encrypt-only and MAC-only algorithms are derived.  Thus instead of using the RecipientInfo to communicate (for example) an AES or HMAC-SHA1 key, it communicates a master secret from which the required AES encryption and HMAC-SHA1 authentication keys are derived.  </p>
 <div id="#rfc.figure.4"></div>
 <pre>
     id-smime OBJECT IDENTIFIER ::= { iso(1) member-body(2)
@@ -529,24 +529,25 @@
 <p></p>
 
 <ul class="empty">
-<li>prfAlgorithm is the PRF algorithm used to convert the authEnc value into the encryption and MAC keys.  The default PRF is <a href="#PBKDF2">[PBKDF2]</a> (which in turn has a default PRF algorithm of HMAC-SHA1).</li>
+<li>prfAlgorithm is the PRF algorithm used to convert the master secret into the encryption and MAC keys.  The default PRF is <a href="#PBKDF2">[PBKDF2]</a>, which in turn has a default PRF algorithm of HMAC-SHA1.  When this default setting is used, the PBKDF2-params 'salt' parameter is an empty string and the 'iterationCount' parameter is one, turning the KDF into a pure PRF.</li>
 <li>encAlgorithm is the encryption algorithm and associated parameters to be used to encrypt the content.</li>
 <li>macAlgorithm is the MAC algorithm and associated parameters to be used to authenticate/integrity-protect the content.</li>
 </ul>
 
 <p> </p>
-<p id="rfc.section.4.p.4">When the PRF AlgorithmIdentifier is used to specify a PRF other than the default PBKDF2-with-HMAC-SHA1 one, the salt parameter MUST be an empty (zero- length) string and the iterationCount MUST be one, since these values aren't used in the PRF process. In their encoded form, these two parameters have the value 08 00 02 01 01.  </p>
+<p id="rfc.section.4.p.4">When the prfAlgorithm AlgorithmIdentifier is used in conjunction with PBKDF2 to specify a PRF other than the default PBKDF2-with-HMAC-SHA1 one, the PBKDF2-params require that two additional algorithm parameters be specified.  The 'salt' parameter MUST be an empty (zero-length) string and the 'iterationCount' parameter MUST be one, since these values aren't used in the PRF process.  In their encoded form as used for the PBKDF2-params, these two parameters have the value 08 00 02 01 01.  </p>
+<p id="rfc.section.4.p.5">As a guideline for authors specifying the use of PRFs other than PBKDF2, any additional parameters such as salts, tags, and identification strings SHOULD be set to empty strings and any iteration count SHOULD be set to one.  </p>
 <h1 id="rfc.section.4.1">
 <a href="#rfc.section.4.1">4.1.</a> <a href="#processing" id="processing">Encrypt-and-Authenticate Message Processing</a>
 </h1>
-<p id="rfc.section.4.1.p.1">The randomly-generated authEnc key to be communicated via the RecipientInfo(s) is converted to separate encryption and authentication keys and applied to the encrypt-and-authenticate process as follows.  The notation "PRF( key, salt, iterations )" is used to denote an application of the PRF to the given keying value and salt, for the given number of iterations: </p>
+<p id="rfc.section.4.1.p.1">The randomly-generated master secret to be communicated via the RecipientInfo(s) is converted to separate encryption and authentication keys and applied to the encrypt-and-authenticate process as follows.  The notation "PRF( key, salt, iterations )" is used to denote an application of the PRF to the given keying value and salt, for the given number of iterations: </p>
 <div id="#rfc.figure.6"></div>
 <pre>
-        MAC-K ::= PRF( authEnc_key, "authentication", 1 );
+        MAC-K ::= PRF( master_secret, "authentication", 1 );
           </pre>
 <div id="#rfc.figure.7"></div>
 <pre>
-        Enc-K ::= PRF( authEnc_key, "encryption", 1 );
+        Enc-K ::= PRF( master_secret, "encryption", 1 );
           </pre>
 <div id="#rfc.figure.8"></div>
 <pre>
@@ -559,8 +560,8 @@
 <p></p>
 
 <ol>
-<li>The MAC algorithm key is derived from the authEnc key via: </li>
-<li>The encryption algorithm key is derived from the authEnc key via: </li>
+<li>The MAC algorithm key is derived from the master secret via: </li>
+<li>The encryption algorithm key is derived from the master secret via: </li>
 <li>The data is processed as described in <a href="#AuthEnv">[AuthEnv]</a>, and specifically since the mechanisms used are a union of EncryptedData and AuthenticatedData, as per <a href="#CMS">[CMS]</a>.  The one exception to this is that the EncryptedContentInfo.ContentEncryptionAlgorithmIdentifier data is MACed before the encrypted content is MAced.  The EncryptedData processing is applied to the data first and then the AuthenticatedData processing is applied to the result, so that the nesting is: </li>
 <li>If authenticated attributes are present then they are encoded as described in <a href="#AuthEnv">[AuthEnv]</a> and MACed after the encrypted content, so that the processing is: </li>
 </ol>
@@ -584,21 +585,23 @@
         }
           </pre>
 <p id="rfc.section.4.2.p.6">The use of the PRF AlgorithmIdentifier presents some problems because it's usually not specified in a manner that allows it to be easily used as a straight KDF.  For example PBKDF2 has parameters: </p>
-<p id="rfc.section.4.2.p.7">Specifying a MAC key size gets a bit tricky, most MAC algorithms have some de facto standard key size and for HMAC algorithms this is usually the same as the hash output size.  For example for HMAC-MD5 it's 128 bits, for HMAC-SHA1 it's 160 bits, and for HMAC-SHA256 it's 256 bits.  Other MAC algorithms also have de facto standard key sizes, for example for AES-based MACs it's the AES key size, 128 bits for AES-128 and 256 bits for AES-256.  This situation makes it difficult to specify the key size in a normative fashion since it's dependent on the algorithm type that's being used.  If there is any ambiguity over which key size should be used then it's recommended that the size be specified explicitly in the macAlgorithm AlgorithmIdentifier.  </p>
+<p id="rfc.section.4.2.p.7">Specifying a MAC key size gets a bit tricky, most MAC algorithms have some de facto standard key size and for HMAC algorithms this is usually the same as the hash output size.  For example for HMAC-MD5 it's 128 bits, for HMAC-SHA1 it's 160 bits, and for HMAC-SHA256 it's 256 bits.  Other MAC algorithms also have de facto standard key sizes, for example for AES-based MACs it's the AES key size, 128 bits for AES-128 and 256 bits for AES-256.  This situation makes it difficult to specify the key size in a normative fashion since it's dependent on the algorithm type that's being used.  If there is any ambiguity over which key size should be used then it's RECOMMENDED that either the size be specified explicitly in the macAlgorithm AlgorithmIdentifier or that an RFC or similar standards document be created that makes the key sizes explicit.  </p>
 <p id="rfc.section.4.2.p.8">As with other uses of PRFs for cryto impedance matching in protocols like IPsec, SSL/TLS and SSH, the amount of input to the PRF generally doesn't match the amount of output.  The general philosophical implications of this are covered in various analyses of the properties and uses of PRFs.  If you're worried about this then you can try and approximately match the authEnc "key size" to the key size of the encryption algorithm being used, although even there a perfect match for algorithms like Blowfish (448 bits) or RC5 (832 bits) is going to be difficult.  </p>
-<p id="rfc.section.4.2.p.9">Apart from the extra step added to key management, all of the processing is already specified as part of the definition of the standard CMS content-types Encrypted/EnvelopedData and AuthenticatedData.  This significantly simplifies both the specification and the implementation task, as no new content-processing mechanisms are introduced.  </p>
+<p id="rfc.section.4.2.p.9">The term "master secret" comes from its use in SSL/TLS, which uses a similar PRF-based mechanism to convert its master_secret value into encryption and MAC keys (as do SSH and IPsec).  The master_secret value isn't a key in the conventional sense, but merely a secret value that's then used to derive two (or, in the cases of SSL/TLS, SSH, and IPsec, several) keys and related cryptovariables.  </p>
+<p id="rfc.section.4.2.p.10">Apart from the extra step added to key management, all of the processing is already specified as part of the definition of the standard CMS content-types Encrypted/EnvelopedData and AuthenticatedData.  This significantly simplifies both the specification and the implementation task, as no new content-processing mechanisms are introduced.  </p>
 <h1 id="rfc.section.4.3">
 <a href="#rfc.section.4.3">4.3.</a> <a href="#test-vectors" id="test-vectors">Test Vectors</a>
 </h1>
-<p id="rfc.section.4.3.p.1">The following test vectors may be used to verify an implementation of MAC-authenticated encryption.  This represents a text string encrypted and authenticated using the password "Password" via CMS PasswordRecipientInfo.  The encryption algorithm used is triple DES, whose short block size (compared to AES) makes it easier to corrupt arbitrary bytes for testing purposes within the self-healing CBC mode which will result in correct decryption but a failed MAC check.  </p>
-<p id="rfc.section.4.3.p.2">The test data has the following characteristics: </p>
+<p id="rfc.section.4.3.p.1">The following test vectors may be used to verify an implementation of MAC-authenticated encryption.  This represents a text string encrypted and authenticated using the ever-popular password "password" via CMS PasswordRecipientInfo.  The encryption algorithm used for the first value is triple DES, whose short block size (compared to AES) makes it easier to corrupt arbitrary bytes for testing purposes within the self-healing CBC mode which will result in correct decryption but a failed MAC check, and for the second value is AES.  </p>
+<p id="rfc.section.4.3.p.2">For the triple DES-encrypted data, corrupting the a byte at positions 192-208 can be used to check that payload-data corruption is detected, and corrupting a byte at positions 168-174 can be used to check that metadata corruption is detected.  The corruption in these byte ranges doesn't affect normal processing, so wouldn't normally be detected.  </p>
+<p id="rfc.section.4.3.p.3">The test data has the following characteristics: </p>
 <p></p>
 
 <ul class="empty">
 <li>version is set to 0.</li>
 <li>originatorInfo isn't needed and is omitted.</li>
 <li>recipientInfos uses passwordRecipientInfo to allow easy testing with a fixed text string.</li>
-<li>authEncryptedContentInfo uses the authEnc128 pseudo-algorithm with a key of 128 bits used to derive triple DES and HMAC-SHA1 keys.</li>
+<li>authEncryptedContentInfo uses the authEnc128 pseudo-algorithm with a key of 128 bits used to derive triple DES/AES and HMAC-SHA1 keys.</li>
 <li>authAttrs aren't used and are omitted.</li>
 <li>mac is the 20-byte HMAC-SHA1 MAC value.</li>
 <li>unauthAttrs aren't used and are omitted.</li>
@@ -676,6 +679,79 @@ BoYdqEcsbTodlCFAZH4=
 -----END PKCS7-----
         </pre>
 <p></p>
+<div id="#rfc.figure.13"></div>
+<pre>
+   0  253: SEQUENCE {
+   3   11:   OBJECT IDENTIFIER authEnvelopedData
+                               (1 2 840 113549 1 9 16 1 23)
+  16  237:   [0] {
+  19  234:     SEQUENCE {
+  22    1:       INTEGER 0
+  25  114:       SET {
+  27  112:         [3] {
+  29    1:           INTEGER 0
+  32   27:           [0] {
+  34    9:             OBJECT IDENTIFIER pkcs5PBKDF2
+                                         (1 2 840 113549 1 5 12)
+  45   14:             SEQUENCE {
+  47    8:               OCTET STRING E7 B7 87 DF 82 1D 12 CC
+  57    2:               INTEGER 5000
+         :               }
+         :             }
+  61   44:           SEQUENCE {
+  63   11:             OBJECT IDENTIFIER pwriKEK
+                                         (1 2 840 113549 1 9 16 3 9)
+  76   29:             SEQUENCE {
+  78    9:               OBJECT IDENTIFIER aes128-CBC
+                                           (2 16 840 1 101 3 4 1 2)
+  89   16:               OCTET STRING
+         :               11 D9 5C 52 0A 3A BF 22 B2 30 70 EF F4 7D 6E F6
+         :               }
+         :             }
+ 107   32:           OCTET STRING
+         :             18 39 22 27 C3 C2 2C 2A A6 9F 2A B0 77 24 75 AA
+         :             D8 58 9C CD BB 4C AE D3 0D C2 CB 1D 83 94 6C 37
+         :           }
+         :         }
+ 141   91:       SEQUENCE {
+ 143    9:         OBJECT IDENTIFIER data (1 2 840 113549 1 7 1)
+ 154   60:         SEQUENCE {
+ 156   11:           OBJECT IDENTIFIER authEnc128
+                                       (1 2 840 113549 1 9 16 3 15)
+ 169   45:           SEQUENCE {
+ 171   29:             SEQUENCE {
+ 173    9:               OBJECT IDENTIFIER aes128-CBC
+                                           (2 16 840 1 101 3 4 1 2)
+ 184   16:               OCTET STRING
+         :               B7 25 02 76 84 3C 58 1B A5 30 E2 40 27 EE C3 06
+         :               }
+ 202   12:             SEQUENCE {
+ 204    8:               OBJECT IDENTIFIER hmacSHA (1 3 6 1 5 5 8 1 2)
+ 214    0:               NULL
+         :               }
+         :             }
+         :           }
+ 216   16:         [0] 98 36 0F 0C 79 62 36 B5 2D 2D 9E 1C 62 85 1E 10
+         :         }
+ 234   20:       OCTET STRING
+         :         88 A4 C1 B2 BA 78 1B CA F9 14 B0 E5 FC D1 8D F8
+         :         02 E2 B2 9E
+         :       }
+         :     }
+         :   }
+        </pre>
+<p></p>
+<div id="#rfc.figure.14"></div>
+<pre>
+-----BEGIN PKCS7-----
+MIH9BgsqhkiG9w0BCRABF6CB7TCB6gIBADFyo3ACAQCgGwYJKoZIhvcNAQUMMA4ECOe3h9+C
+HRLMAgITiDAsBgsqhkiG9w0BCRADCTAdBglghkgBZQMEAQIEEBHZXFIKOr8isjBw7/R9bvYE
+IBg5IifDwiwqpp8qsHckdarYWJzNu0yu0w3Cyx2DlGw3MFsGCSqGSIb3DQEHATA8BgsqhkiG
+9w0BCRADDzAtMB0GCWCGSAFlAwQBAgQQtyUCdoQ8WBulMOJAJ+7DBjAMBggrBgEFBQgBAgUA
+gBCYNg8MeWI2tS0tnhxihR4QBBSIpMGyungbyvkUsOX80Y34AuKyng==
+-----END PKCS7-----
+        </pre>
+<p></p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> <a href="#smimecaps" id="smimecaps">SMIMECapabilities Attribute</a>
 </h1>
@@ -693,7 +769,7 @@ BoYdqEcsbTodlCFAZH4=
 <h1 id="rfc.section.8">
 <a href="#rfc.section.8">8.</a> <a href="#ack" id="ack">Acknowledgements</a>
 </h1>
-<p id="rfc.section.8.p.1">The author would like to thank Jim Schaad and the members of the S/MIME mailing list for their feedback on this document.  </p>
+<p id="rfc.section.8.p.1">The author would like to thank Jim Schaad and the members of the S/MIME mailing list for their feedback on this document and David Ireland for help with the test vectors.  </p>
 <h1 id="rfc.references">
 <a href="#rfc.references">9.</a> References</h1>
 <h1 id="rfc.references.1">
