draft-ietf-isms-dtls-tm-14

--- a/draft-ietf-isms-dtls-tm-14.html
+++ b/draft-ietf-isms-dtls-tm-14.html
@@ -159,7 +159,7 @@
 <tr><td class="header">Expires: November 8, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
 <h1><br />Transport Layer Security (TLS) Transport Model for the Simple
-      Network Management Protocol (SNMP)<br />draft-ietf-isms-dtls-tm-13.txt</h1>
+      Network Management Protocol (SNMP)<br />draft-ietf-isms-dtls-tm-14.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -1539,12 +1539,14 @@ Procedures for an Incoming Message</h3>
 DTLS over UDP Processing for Incoming Messages</h3>
 
 <p>
-            For connection-oriented transport protocols, such as TCP,
+            Demultiplexing of incoming packets into separate DTLS
+	    sessions MUST be implemented.  For connection-oriented
+	    transport protocols, such as TCP,
             the transport protocol takes care of demultiplexing
             incoming packets to the right connection. Depending on the
             DTLS implementation, for DTLS over UDP, this
-            demultiplexing may need to be done by the TLSTM
-            implementation.
+            demultiplexing will either need to be done within the TLS
+            implementation or by the TLSTM implementation.
           
 </p>
 <p>
