draft-ietf-sip-xcapevent-07

--- a/draft-ietf-sip-xcapevent-07.html
+++ b/draft-ietf-sip-xcapevent-07.html
@@ -155,11 +155,11 @@
 <tr><td class="header">SIP</td><td class="header">J. Urpalainen</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Nokia</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">D. Willis, Ed.</td></tr>
-<tr><td class="header">Expires: November 28, 2009</td><td class="header">Softarmor Systems LLC</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">May 27, 2009</td></tr>
+<tr><td class="header">Expires: November 29, 2009</td><td class="header">Softarmor Systems LLC</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">May 28, 2009</td></tr>
 </table></td></tr></table>
 <h1><br />An Extensible Markup Language (XML)
-    Configuration Access Protocol (XCAP) Diff Event Package<br />draft-ietf-sip-xcapevent-06</h1>
+    Configuration Access Protocol (XCAP) Diff Event Package<br />draft-ietf-sip-xcapevent-07</h1>
 
 <h3>Status of this Memo</h3>
 <p>
@@ -193,7 +193,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on November 28, 2009.</p>
+This Internet-Draft will expire on November 29, 2009.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -661,13 +661,13 @@ Notifier Generation of NOTIFY Requests</h3>
         diff-generation temporarily for certain resources, for example when
         the NOTIFY body becomes impractically large or an intermediate error
         has happened. Some XCAP clients will probably not have completely
-        optimized their patchrequest, so even when acting in the
+        optimized their patch request, so even when acting in the
         "xcap-patching" operational mode, the notifier MAY try to optimize the
         diff-generation, for example by eliminating redundant patch
         operations. Otherwise said: the notifier is not required to send patch
         operations exactly as received by clients; rather it MAY notify with a
         more efficient patch operation that MUST produce the same result as
-        the series of patch operations producd by the XCAP client.
+        the series of patch operations produced by the XCAP client.
 </p>
 <p></p>
 <blockquote class="text"><dl>
@@ -714,7 +714,7 @@ Notifier Generation of NOTIFY Requests</h3>
 </p>
 <p>Event packages like this require reliable transfer of NOTIFY
         messages. This means that all messages MUST successfully be
-        transferred or the document will become out of synch, and then patches
+        transferred or the document will become out of sync, and then patches
         will most likely fail (or worse, have unintended consequences). This
         "xcap-diff" event package requires, similar to Partial-PIDF-Notify RFC
         5263 <a class='info' href='#RFC5263'>[RFC5263]<span> (</span><span class='info'>Lonnfors, M., Costa-Requena, J., Leppanen, E., and H. Khartabil, &ldquo;Session Initiation Protocol (SIP) Extension for Partial Notification of Presence Information,&rdquo; September&nbsp;2008.</span><span>)</span></a>, that a notifier MUST NOT send a
@@ -1266,25 +1266,34 @@ Event: xcap-diff
 Content-Type: application/xcap-diff+xml
 Content-Length: [XXX]
 
-</pre></div><p>
-</p>
-<div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
+&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+&lt;d:xcap-diff xmlns:d="urn:ietf:params:xml:ns:xcap-diff"
+	     xcap-root="http://xcap.example.com/"&gt;
+  &lt;d:document previous-etag="7ahggs"
+	      sel="tests/users/sip:joe@example.com/index"
+	      new-etag="fgherhryt3"&gt;
+    &lt;d:add sel="*"&gt;
+      &lt;foo&gt;this is a new element&lt;/foo&gt;
+    &lt;/d:add&gt;
+  &lt;/d:document&gt;
+  &lt;d:document previous-etag="fgherhryt3"
+	      sel="tests/users/sip:joe@example.com/index"
+	      new-etag="dgdgdfgrrr"&gt;
+    &lt;d:add sel="*"&gt;
+      &lt;bar&gt;this is a bar element
+      &lt;/bar&gt;
+    &lt;/d:add&gt;
+  &lt;/d:document&gt;
+  &lt;d:document previous-etag="dgdgdfgrrr"
+	      sel="tests/users/sip:joe@example.com/index"
+	      new-etag="63hjjsll"&gt;
+    &lt;d:add sel="*"&gt;
+      &lt;foobar&gt;this is a foobar element&lt;/foobar&gt;
+    &lt;/d:add&gt;
+  &lt;/d:document&gt;
+&lt;/d:xcap-diff&gt;
 
-NOTIFY sip:joe@userhost.example.com SIP/2.0
-...
-Event: xcap-diff
-Content-Type: application/xcap-diff+xml
-Content-Length: [XXX]
 
-</pre></div><p>
-</p>
-<div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
-
-NOTIFY sip:joe@userhost.example.com SIP/2.0
-...
-Event: xcap-diff
-Content-Type: application/xcap-diff+xml
-Content-Length: [XXX]
 
 </pre></div><p>
  If the client had to re-fetch the "index" document after
