draft-ietf-intarea-ipv6-required-01

--- a/draft-ietf-intarea-ipv6-required-01.html
+++ b/draft-ietf-intarea-ipv6-required-01.html
@@ -398,7 +398,7 @@
 <td class="right">Cablelabs</td>
 </tr>
 <tr>
-<td class="left">Expires: December 19, 2011</td>
+<td class="left">Expires: January 12, 2012</td>
 <td class="right">C. Liljenstolpe</td>
 </tr>
 <tr>
@@ -415,7 +415,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">June 17, 2011</td>
+<td class="right">July 11, 2011</td>
 </tr>
 
     	
@@ -423,7 +423,7 @@
   </table>
 
   <p class="title">IPv6 Support Required for all IP-capable nodes<br />
-  <span class="filename">draft-ietf-intarea-ipv6-required-00</span></p>
+  <span class="filename">draft-ietf-intarea-ipv6-required-01</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>Given the global lack of available IPv4 space, and limitations in IPv4 extension and transition technologies, this document deprecates the concept that an IP-capable node MAY support IPv4 _only_, and redefines an IP-capable node as one which supports either IPv6 _only_ or IPv4/IPv6 dual-stack. This document updates RFC1812, RFC1122 and RFC4084 to reflect the change in requirements.</p>
@@ -431,7 +431,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 19, 2011.</p>
+<p>This Internet-Draft will expire on January 12, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -478,25 +478,24 @@
 <a href="#rfc.section.2">2.</a> <a href="#simple_list" id="simple_list">Requirements and Recommendation</a>
 </h1>
 <p id="rfc.section.2.p.1">This draft updates the following documents:</p>
-<p id="rfc.section.2.p.2">Updates <a href="#RFC1812">[RFC1812]</a> to note that IP nodes SHOULD no longer support IPv4 only. This is to ensure that those using it as a guideline for IP implementations use the other informative references in this document as a guideline for proper IPv6 implementations.</p>
-<p id="rfc.section.2.p.3">Updates <a href="#RFC1122">[RFC1122]</a> to redefine generic "IP" support to include and require IPv6 for IP-capable nodes and routers.</p>
+<p id="rfc.section.2.p.2">Updates <a href="#RFC1812">[RFC1812]</a>, especially sections 1, 2, and 4 which use the generic "IP" synonymously with the more specific "IPv4." Since RFC1812 is an IPv4 router specification, the generic use of IP in this standard may cause confusion as IP is redefined to mean IPv4 + IPv6. This proposed update is not intended to change the existing technical interpretation of RFC1812 to include IPv6 in its implementation details. Rather, it is intended to ensure that those using RFC1812 as a guideline for IP implementations understand that IP nodes SHOULD NOT support IPv4 only, and that they should use the other informative references in this document as a companion guideline for proper IPv6 implementations. </p>
+<p id="rfc.section.2.p.3">Updates <a href="#RFC1122">[RFC1122]</a> to clarify that this document, especially in section 3, primarily discusses IPv4 where it uses the more generic term "IP" and is no longer a complete definition of "IP" or the Internet Protocol suite by itself. For example, section 3.1 does not contain references to the IPv6 equivalent standards for the Internet layer, section 3.2 is a protocol walk-through for IPv4 only; section 3.2.1.1 explicitly requires an IP datagram whose version number is not 4 to be discarded, which would be detrimental to IPv6 forwarding. However, portions of RFC1122 refer to the Internet Layer and IP more in terms of its function and are less version-specific, such as Section 1.1.3. In these cases, it is possible to redefine generic "IP" support to include and require IPv6 for IP-capable nodes and routers. </p>
 <p id="rfc.section.2.p.4">Updates <a href="#RFC4084">[RFC4084]</a> to move "Version Support" from Section 4, "Additional Terminology" to Section 2, "General Terminology." This is to reflect the idea that version support is now critical to defining the types of IP service, especially with respect to Full Internet Connectivity.</p>
-<p id="rfc.section.2.p.5">From a practical perspective, the requirements proposed by this draft mean that:</p>
+<p id="rfc.section.2.p.5">Rather than update the existing IPv4 protocol specification standards to include IPv6, IETF has defined a completely separate set of standalone documents which cover IPv6. Therefore, the above-listed standards are not being updated to include the complete technical details of IPv6, but to identify that a distinction must be made between IPv4 and IPv6 in some places where IP is used generically. Current requirements for IPv6 support can be found in <a href="#RFC4294">[RFC4294]</a>, soon to be updated by <a href="#I-D.ietf-6man-node-req-bis">[I-D.ietf-6man-node-req-bis]</a> and in <a href="#RFC6204">[RFC6204]</a>. Each of these documents contains specific information, requirements, and references to other draft and proposed standards governing many aspects of IPv6 implementation.</p>
+<p id="rfc.section.2.p.6">From a practical perspective, the requirements proposed by this draft mean that:</p>
 <p></p>
 
 <ul class="empty">
 <li>New IP implementations MUST support IPv6.</li>
 <li>Current IP implementations SHOULD support IPv6.</li>
 <li>IPv6 support MUST be equivalent or better in quality and functionality when compared to IPv4 support in an IP implementation.</li>
-<li>Helpful informative references can be found in <a href="#RFC4294">[RFC4294]</a>, soon to be updated by <a href="#I-D.ietf-6man-node-req-bis">[I-D.ietf-6man-node-req-bis]</a> and in <a href="#RFC6204">[RFC6204]</a>
-</li>
 <li>Current and new IP Networking implementations SHOULD support IPv4 and IPv6 coexistence (dual-stack), but MUST NOT require IPv4 for proper and complete function.</li>
 <li>It is expected that many existing devices and implementations will not be able to support IPv6 for one or more valid technical reasons, but for maximum flexibility and compatibility, a best effort SHOULD be made to update existing hardware and software to enable IPv6 support.</li>
 </ul>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a>
 </h1>
-<p id="rfc.section.3.p.1">Thanks to the following people for their reviews and comments: Marla Azinger, Brian Carpenter, Victor Kuarsingh, Jari Arkko, Scott Brim, Margaret Wasserman, Joe Touch</p>
+<p id="rfc.section.3.p.1">Thanks to the following people for their reviews and comments: Marla Azinger, Brian Carpenter, Victor Kuarsingh, Jari Arkko, Scott Brim, Margaret Wasserman, Joe Touch, Fred Baker, Benson Schliesser</p>
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#IANA" id="IANA">IANA Considerations</a>
 </h1>
